kubernetes/main/apps/network/hass-proxy/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hass-proxy
spec:
  externalName: hassio.monosense.dev
  ports:
    - name: http
      port: 8123
      protocol: TCP
      targetPort: 8123
  type: ExternalName
