kubernetes/main/apps/network/hass-proxy/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass-proxy
  annotations:
    external-dns.alpha.kubernetes.io/target: external.monosense.io
    # nginx.org/websocket-services: hass-proxy
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
      }
      location /api/websocket {
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
      }

spec:
  ingressClassName: external
  rules:
    - host: &host ha.monosense.io
      http:
        paths:
          - backend:
              service:
                name: hass-proxy
                port:
                  name: http
            path: /
            pathType: Prefix
  tls: [hosts: [*host]]
